2005-04-18 Magnus Hagdorn
 * configure.in: bump version to 0.5.2
 * definitions.tex: changed doc date to today
 * make_doc.rules: fix problem with dia where fonts are tiny
 * updated NEWS

2005-04-15 Magnus Hagdorn
 * glide.tex: added documentation for isostasy

2005-04-12 Ian Rutt
 * Added optional command-line interface to glint_example.f90. Uses
   non-standard Fortran extensions in the intel compiler - can be
   selected at compile-time by defining preprocessor symbol GLEX_COM_LINE.
   Needed to do this to facilitate batch processing of glint runs on
   our Beowulf cluster, but obviously it's non-ideal.
 * Corrected error in comment in glint_vars.def
	
2005-04-11 Magnus Hagdorn
 * glimmer_CFproj.f90: rename attribute back to scale_factor_at_projection_origin in order to
   adhere to CF standard
 * glint_vars.def: add standard names to a few variables

2005-04-11 Magnus Hagdorn
 * glint_global_interp.f90: real constants have to be double precision, changed
   masko==.false. to .not.masko
 * glint_example_clim.f90: initialise pointers to NULL(), dummy arguments which might be
   unassociated have to be pointers

2005-04-11 Ian Rutt
 * Added asynchronous coupling of mass-balance to ice model in glint

2005-04-05 Ian Rutt
 * New climate driver for glint_example.f90, called
   glint_example_clim.f90, now handles netcdf input files more flexibly.
 * Added error-handling code to glint_global_interp.f90
 * Added various operator overloadings to glint_global_grid.f90
	
2005-04-04 Magnus Hagdorn
 * glide_velo.f90: grr, used wrong derivatives for basal shear calcs,
   fixed

2005-04-04 Magnus Hagdorn
 * glide_thck.f90: move surface and horiz deriv calculations to
   thck_evolve
 * glide_types.f90: added basal shear stress variables
 * glide_vars.def: ditto
 * glide_velo.f90: added shear stress calculations
 * glide.f90: indicated where basal shear stress cals might go
 
2005-03-24 Ian Rutt
 * Changed glint_global_interp to use global grid types to define